--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>FCC API Basejump: Timestamp Microservice</h1>
         <div>
-            <p>User Stories</p>
+            <h3>User Stories</h3>
             <ol>
                 <li>I can pass a string as a parameter and it will check to see 
                     whether that string contains either a unix timestamp or a 
@@ -22,12 +22,13 @@
         <div>
             <h3>Example Usage</h3>
             <ul>
-                <li>url/natural</li>
-                <li>url/unix</li>
+                <li>https://vast-journey-21759.herokuapp.com/October%2031,%201999</li>
+                <li>https://timestamp-ms.herokuapp.com/941342400</li>
             </ul>
         </div>
         <div>
             <h3>Example Output</h3>
+            <p>{"unix":941342400,"natural":"October 31, 1999"}</p>
         </div>
     </body>
 </html>
