--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>FCC API Basejump: Timestamp Microservice</h1>
         <div>
-            <h3>User Stories</h3>
+            <h3>User Stories:</h3>
             <ol>
                 <li>I can pass a string as a parameter and it will check to see 
                     whether that string contains either a unix timestamp or a 
@@ -20,14 +20,14 @@
             </ol>
         </div>
         <div>
-            <h3>Example Usage</h3>
+            <h3>Example Usage:</h3>
             <ul>
                 <li>https://vast-journey-21759.herokuapp.com/October%2031,%201999</li>
                 <li>https://timestamp-ms.herokuapp.com/941342400</li>
             </ul>
         </div>
         <div>
-            <h3>Example Output</h3>
+            <h3>Example Output:</h3>
             <p>{"unix":941342400,"natural":"October 31, 1999"}</p>
         </div>
     </body>
